--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
     "angular-froala-wysiwyg": "^2.8.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
